fix white part of page overlapping form

--- a/IDis.Interface/addCategory/add-category.css
+++ b/IDis.Interface/addCategory/add-category.css
@@ -17,10 +17,12 @@ body {
 }
 
 .top-gradient {
+    position: relative;
     width: 100%;
-    min-height: 100vh; /* Change this to min-height */
+    min-height: 75vh;
     background-image: linear-gradient(to top right, #6563ED, #26C3DE);
-    clip-path: polygon(0 0, 100% 0, 100% 900px, 0 1000px);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+    z-index: 1;
 }
 
 body::-webkit-scrollbar {
@@ -101,12 +103,15 @@ nav a:hover {
 
 
 .content {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - 1000px); /* Change this to min-height */
     padding: 20px; /* Add some padding around the content */
     padding-top: 250px;
+    margin-top: -75vh;
+    z-index: 1000;
 }
 
 
@@ -115,6 +120,7 @@ nav a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .category-box {
@@ -129,6 +135,7 @@ nav a:hover {
     align-items: center;
     margin-right: 50px;
     margin-left: 25px;
+    z-index: 1000;
 }
 
 .category-box h2 {
